--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@gorhom/bottom-sheet": "^5.0.2",
     "@react-native-camera-roll/camera-roll": "^7.8.3",
     "@react-native-community/blur": "^4.4.1",
+    "@react-native-community/cli": "15.0.1",
     "@react-native-community/netinfo": "11.4.1",
-    "@react-native-community/slider": "4.5.2",
+    "@react-native-community/slider": "^4.5.5",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/bottom-tabs": "^7.0.0-rc.34",
     "@react-navigation/drawer": "^7.0.0-rc.32",
@@ -22,11 +23,11 @@
     "@react-navigation/native-stack": "^7.0.0-rc.29",
     "@react-navigation/stack": "^7.0.0-rc.28",
     "@reduxjs/toolkit": "^2.3.0",
-    "@sentry/react-native": "~5.33.1",
+    "@sentry/react-native": "~6.3.0",
     "@shopify/flash-list": "1.7.1",
     "axios": "^1.7.7",
     "bson": "^6.8.0",
-    "expo": "^52.0.0-preview.3",
+    "expo": "^52.0.28",
     "expo-av": "~15.0.1",
     "expo-background-fetch": "~13.0.1",
     "expo-blur": "~14.0.1",
@@ -38,15 +39,15 @@
     "expo-linking": "~7.0.1",
     "expo-navigation-bar": "~4.0.1",
     "expo-notifications": "~0.29.2",
-    "expo-splash-screen": "~0.28.2",
+    "expo-splash-screen": "^0.29.21",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.1",
     "expo-video": "~2.0.0-preview.0",
     "expo-web-browser": "~14.0.0",
-    "lottie-react-native": "^7.2.2",
+    "lottie-react-native": "^7.1.0",
+    "metro": "^0.81.1",
     "react": "18.3.1",
-    "react-hook-form": "^7.54.2",
-    "react-native": "~0.76.0",
+    "react-hook-form": "^7.53.0",
     "react-native-blob-util": "^0.19.11",
     "react-native-bouncy-checkbox": "^4.1.2",
     "react-native-circular-progress": "^1.4.0",
@@ -63,30 +64,35 @@
     "react-native-image-picker": "^7.1.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-mmkv": "^2.12.2",
-    "react-native-pager-view": "6.4.1",
+    "react-native-pager-view": "^6.5.1",
     "react-native-paper": "^5.12.5",
+    "react-native-polyfill-globals": "^3.1.0",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.11.0",
-    "react-native-screens": "4.0.0-beta.14",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-share": "^11.0.4",
     "react-native-svg": "15.8.0",
     "react-native-system-navigation-bar": "^2.6.4",
     "react-native-tab-view": "^3.5.2",
     "react-native-theme-switch-animation": "^0.8.0",
     "react-native-uuid": "^2.0.2",
-    "react-native-view-shot": "3.8.0",
-    "react-native-webview": "13.12.2",
+    "react-native-view-shot": "~4.0.3",
+    "react-native-webview": "^13.12.5",
     "react-navigation-shared-element": "^3.1.3",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
-    "socket.io-client": "^4.8.0"
+    "socket.io-client": "^4.8.0",
+    "timers": "^0.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.8",
-    "@types/react": "~18.2.79",
+    "@babel/plugin-transform-private-methods": "^7.25.9",
+    "@types/react": "~18.3.12",
+    "@types/react-native": "^0.72.8",
     "babel-plugin-module-resolver": "^5.0.2",
     "babel-plugin-transform-remove-console": "^6.9.4",
+    "metro-react-native-babel-preset": "^0.77.0",
     "typescript": "~5.6.3"
   },
   "private": true
