entry point error

--- a/app.json
+++ b/app.json
@@ -83,7 +83,12 @@
           }
         }
       ],
-      "expo-video"
+      [
+        "expo-av",
+        {
+          "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone."
+        }
+      ]
     ],
     "owner": "hojoisaac"
   }
