--- a/package.json
+++ b/package.json
@@ -10,83 +10,93 @@
     "build": "eas build --platform android --local"
   },
   "dependencies": {
-    "@gorhom/bottom-sheet": "^5.1.0",
+    "@gorhom/bottom-sheet": "^4.5.1",
     "@react-native-camera-roll/camera-roll": "^7.4.0",
     "@react-native-community/blur": "^4.4.0",
-    "@react-native-community/cli": "^12.3.5",
+    "@react-native-community/cli": "^13.5.1",
     "@react-native-community/netinfo": "^11.2.1",
     "@react-native-community/slider": "^4.5.0",
-    "@react-native-masked-view/masked-view": "^0.3.0",
+    "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
-    "@reduxjs/toolkit": "^2.0.1",
-    "@sentry/react-native": "^5.17.0",
-    "@shopify/flash-list": "1.6.3",
-    "axios": "^1.6.5",
-    "bson": "^6.2.0",
+    "@reduxjs/toolkit": "2.0.1",
+    "@sentry/react-native": "~6.3.0",
+    "@shopify/flash-list": "1.7.1",
+    "@types/react-native": "~0.72.8",
+    "axios": "^1.6.7",
+    "bson": "^6.3.0",
     "expo": "^52.0.0",
-    "expo-av": "~13.10.0",
-    "expo-background-fetch": "~11.8.1",
-    "expo-blur": "~12.9.1",
-    "expo-build-properties": "~0.11.1",
-    "expo-constants": "~15.4.5",
-    "expo-device": "~5.9.3",
-    "expo-haptics": "~12.8.1",
-    "expo-image": "~1.10.5",
-    "expo-linking": "~6.2.2",
-    "expo-navigation-bar": "~2.8.1",
-    "expo-notifications": "~0.27.6",
-    "expo-splash-screen": "~0.26.4",
-    "expo-status-bar": "~1.11.1",
-    "expo-system-ui": "~2.9.3",
-    "expo-web-browser": "~12.8.2",
-    "lottie-react-native": "6.5.1",
-    "metro": "^0.80.4",
-    "react": "18.2.0",
-    "react-native": "0.73.4",
+    "expo-av": "~15.0.2",
+    "expo-background-fetch": "~13.0.5",
+    "expo-blur": "~14.0.3",
+    "expo-build-properties": "~0.13.2",
+    "expo-constants": "~17.0.5",
+    "expo-device": "~7.0.2",
+    "expo-haptics": "~14.0.1",
+    "expo-image": "~2.0.4",
+    "expo-linking": "~7.0.5",
+    "expo-navigation-bar": "~4.0.7",
+    "expo-notifications": "~0.29.13",
+    "expo-splash-screen": "~0.29.21",
+    "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "~4.0.7",
+    "expo-web-browser": "~14.0.2",
+    "lottie-react-native": "7.1.0",
+    "metro": "^0.81.0",
+    "metro-react-native-babel-preset": "^0.77.0",
+    "react": "18.3.1",
     "react-hook-form": "^7.49.3",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-svg": "14.1.0",
-    "react-native-blob-util": "^0.19.11",
-    "react-native-bouncy-checkbox": "^4.1.2",
+    "react-native": "0.76.6",
+    "react-native-blob-util": "^0.19.6",
+    "react-native-bouncy-checkbox": "^4.1.0",
     "react-native-circular-progress": "^1.4.0",
     "react-native-compressor": "^1.9.0",
     "react-native-context-menu-view": "^1.16.0",
     "react-native-device-info": "^13.1.0",
-    "react-native-document-picker": "^9.3.1",
-    "react-native-dotenv": "^3.4.11",
+    "react-native-document-picker": "^9.1.1",
+    "react-native-dotenv": "^3.4.9",
     "react-native-edge-to-edge": "^0.1.1",
     "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
-    "react-native-image-crop-picker": "^0.41.4",
-    "react-native-image-picker": "^7.1.2",
+    "react-native-image-crop-picker": "^0.40.3",
+    "react-native-image-picker": "^7.1.0",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-mmkv": "^2.12.2",
-    "react-native-pager-view": "^6.5.1",
-    "react-native-paper": "^5.12.5",
+    "react-native-mmkv": "^2.12.1",
+    "react-native-pager-view": "6.5.1",
+    "react-native-paper": "^5.12.3",
     "react-native-polyfill-globals": "^3.1.0",
     "react-native-progress": "^5.0.1",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-share": "^10.0.2",
+    "react-native-svg": "15.8.0",
+    "react-native-system-navigation-bar": "^2.2.0",
+    "react-native-tab-view": "^3.5.2",
+    "react-native-uuid": "^2.0.1",
+    "react-native-view-shot": "~4.0.3",
     "react-navigation-shared-element": "^3.1.3",
-    "react-redux": "^9.1.2",
+    "react-redux": "8.1.3",
+    "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
-    "socket.io-client": "^4.8.0",
-    "timers": "^0.1.1"
+    "socket.io-client": "^4.7.4",
+    "timers": "^0.1.1",
+    "web-streams-polyfill": "^3.2.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.7",
-    "@babel/plugin-transform-private-methods": "^7.23.3",
-    "@types/react": "~18.2.45",
-    "@types/react-native": "~0.72.8",
+    "@babel/core": "^7.24.0",
+    "@babel/plugin-transform-private-methods": "^7.24.0",
+    "@types/node": "^20.11.19",
+    "@types/react": "~18.3.12",
+    "@types/react-redux": "^7.1.33",
+    "@types/redux-persist": "^4.0.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "babel-plugin-transform-remove-console": "^6.9.4",
-    "metro-react-native-babel-preset": "^0.77.0",
-    "typescript": "^5.3.0"
+    "typescript": "^5.3.3"
   },
   "private": true
 }
