--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,59 +1,38 @@
 pluginManagement {
-    repositories {
-        gradlePluginPortal()
-        google()
-        mavenCentral()
-    }
-
-    includeBuild(new File(rootDir, "../node_modules/@react-native/gradle-plugin"))
+    includeBuild(new File(["node", "--print", "require.resolve('@react-native/gradle-plugin/package.json', { paths: [require.resolve('react-native/package.json')] })"].execute(null, rootDir).text.trim()).getParentFile().toString())
 }
-
-plugins {
-    id("com.facebook.react.settings")
-}
+plugins { id("com.facebook.react.settings") }
 
 extensions.configure(com.facebook.react.ReactSettingsExtension) { ex ->
-    if (System.getenv('EXPO_USE_COMMUNITY_AUTOLINKING') == '1') {
-        ex.autolinkLibrariesFromCommand()
-    } else {
-        def command = [
-            'node',
-            '--no-warnings',
-            '--eval',
-            'require(require.resolve("expo-modules-autolinking", { paths: [require.resolve("expo/package.json")] }))(process.argv.slice(1))',
-            'react-native-config',
-            '--json',
-            '--platform',
-            'android'
-        ].toList()
-        ex.autolinkLibrariesFromCommand(command)
-    }
+  if (System.getenv('EXPO_USE_COMMUNITY_AUTOLINKING') == '1') {
+    ex.autolinkLibrariesFromCommand()
+  } else {
+    def command = [
+      'node',
+      '--no-warnings',
+      '--eval',
+      'require(require.resolve(\'expo-modules-autolinking\', { paths: [require.resolve(\'expo/package.json\')] }))(process.argv.slice(1))',
+      'react-native-config',
+      '--json',
+      '--platform',
+      'android'
+    ].toList()
+    ex.autolinkLibrariesFromCommand(command)
+  }
 }
 
-rootProject.name = "Qui"
+rootProject.name = 'Qui'
 
 dependencyResolutionManagement {
-    repositories {
-        google()
-        mavenCentral()
-        jcenter()  // Include jcenter only if necessary
+  versionCatalogs {
+    reactAndroidLibs {
+      from(files(new File(["node", "--print", "require.resolve('react-native/package.json')"].execute(null, rootDir).text.trim(), "../gradle/libs.versions.toml")))
     }
-
-    versionCatalogs {
-        reactAndroidLibs {
-            from(files(new File(rootDir, "../node_modules/react-native/gradle/libs.versions.toml")))
-        }
-    }
+  }
 }
 
-apply from: new File(rootDir, "../node_modules/expo/scripts/autolinking.gradle")
+apply from: new File(["node", "--print", "require.resolve('expo/package.json')"].execute(null, rootDir).text.trim(), "../scripts/autolinking.gradle");
 useExpoModules()
 
-include ":app"
-
-// Handling react-native-mmkv
-include ":react-native-mmkv"
-project(":react-native-mmkv").projectDir = new File(rootProject.projectDir, "../node_modules/react-native-mmkv/android")
-
-// Ensure the React Native Gradle Plugin is included properly
-includeBuild(new File(rootDir, "../node_modules/@react-native/gradle-plugin"))
+include ':app'
+includeBuild(new File(["node", "--print", "require.resolve('@react-native/gradle-plugin/package.json', { paths: [require.resolve('react-native/package.json')] })"].execute(null, rootDir).text.trim()).getParentFile())
