--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "social-app",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
@@ -11,8 +10,7 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.5.1",
-    "@react-native-camera-roll/camera-roll": "^7.4.0",
-    "@react-native-community/blur": "^4.4.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/cli": "^13.5.1",
     "@react-native-community/netinfo": "^11.2.1",
     "@react-native-community/slider": "^4.5.0",
@@ -28,18 +26,24 @@
     "@types/react-native": "~0.72.8",
     "axios": "^1.6.7",
     "bson": "^6.3.0",
-    "expo": "^52.0.0",
+    "expo": "^52.0.30",
     "expo-av": "~15.0.2",
     "expo-background-fetch": "~13.0.5",
     "expo-blur": "~14.0.3",
     "expo-build-properties": "~0.13.2",
     "expo-constants": "~17.0.5",
     "expo-device": "~7.0.2",
+    "expo-document-picker": "~11.10.0",
+    "expo-file-system": "~18.0.9",
     "expo-haptics": "~14.0.1",
     "expo-image": "~2.0.4",
+    "expo-image-manipulator": "~11.8.0",
+    "expo-image-picker": "~14.7.1",
     "expo-linking": "~7.0.5",
+    "expo-media-library": "^17.0.5",
     "expo-navigation-bar": "~4.0.7",
     "expo-notifications": "~0.29.13",
+    "expo-sharing": "~11.10.0",
     "expo-splash-screen": "~0.29.21",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.7",
@@ -50,22 +54,14 @@
     "react": "18.3.1",
     "react-hook-form": "^7.49.3",
     "react-native": "0.76.6",
-    "react-native-blob-util": "^0.19.6",
     "react-native-bouncy-checkbox": "^4.1.0",
     "react-native-circular-progress": "^1.4.0",
-    "react-native-compressor": "^1.9.0",
     "react-native-context-menu-view": "^1.16.0",
-    "react-native-device-info": "^13.1.0",
-    "react-native-document-picker": "^9.1.1",
     "react-native-dotenv": "^3.4.9",
     "react-native-edge-to-edge": "^0.1.1",
-    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
-    "react-native-image-crop-picker": "^0.40.3",
-    "react-native-image-picker": "^7.1.0",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-mmkv": "^2.12.1",
     "react-native-pager-view": "6.5.1",
     "react-native-paper": "^5.12.3",
     "react-native-polyfill-globals": "^3.1.0",
@@ -73,12 +69,10 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-share": "^10.0.2",
     "react-native-svg": "15.8.0",
     "react-native-system-navigation-bar": "^2.2.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-uuid": "^2.0.1",
-    "react-native-view-shot": "~4.0.3",
     "react-navigation-shared-element": "^3.1.3",
     "react-redux": "8.1.3",
     "redux": "^4.2.1",
