--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.5.1",
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "1.24.0",
     "@react-native-community/cli": "^13.5.1",
     "@react-native-community/netinfo": "^11.2.1",
     "@react-native-community/slider": "^4.5.0",
@@ -33,17 +33,17 @@
     "expo-build-properties": "~0.13.2",
     "expo-constants": "~17.0.5",
     "expo-device": "~7.0.2",
-    "expo-document-picker": "~11.10.0",
+    "expo-document-picker": "~13.0.2",
     "expo-file-system": "~18.0.9",
     "expo-haptics": "~14.0.1",
     "expo-image": "~2.0.4",
-    "expo-image-manipulator": "~11.8.0",
-    "expo-image-picker": "~14.7.1",
+    "expo-image-manipulator": "~13.0.6",
+    "expo-image-picker": "~16.0.5",
     "expo-linking": "~7.0.5",
     "expo-media-library": "^17.0.5",
     "expo-navigation-bar": "~4.0.7",
     "expo-notifications": "~0.29.13",
-    "expo-sharing": "~11.10.0",
+    "expo-sharing": "~13.0.1",
     "expo-splash-screen": "~0.29.21",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.7",
