--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "social-app",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start",
+    "start": "npx expo start --clear",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
