--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "social-app",
+  "name": "og-duo",
   "version": "1.0.0",
   "scripts": {
     "start": "npx expo start --clear",
@@ -72,7 +72,6 @@
     "react-native-svg": "15.8.0",
     "react-native-system-navigation-bar": "^2.2.0",
     "react-native-tab-view": "^3.5.2",
-    "react-native-uuid": "^2.0.1",
     "react-navigation-shared-element": "^3.1.3",
     "react-redux": "8.1.3",
     "redux": "^4.2.1",
